fix: faq paragraph alignments

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -97,7 +97,7 @@ li {
   line-height: 24px !important;
 }
 .additionalClassForContent p {
-  padding: 7px 0;
+  padding: 7px 18px !important;
 }
 
 /* ####################################################### */
